# Node-Chat

./: .env.example  .gitignore  README.md  database.rules.json  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build-node-chat.yml
src/: App.vue  authUtils.js  avatar.js  dmUtils.js  faviconBadge.js  firebase.js  notifications.js  presence.js  randomId.js  slurFilter.js  style.css  tauri.js  toast.js  twemoji.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AdminPanel.vue  AppShell.vue  AuthForm.vue  ChatRoom.vue  DesktopDragHeader.vue  GifPicker.vue  MessageComposer.vue  NewDmDialog.vue  SetDisplayName.vue  SettingsModal.vue  Sidebar.vue  Toast.vue  WindowControls.vue
src/composables/: useAuthRedirect.js
src/router/: index.js
src/store/: auth.js
src/views/: ChatView.vue  LoginView.vue  SetupView.vue  SignupView.vue
