[package]
name = "node-chat"
version = "1.0.0"
description = "Node Chat desktop app"
authors = ["Node Chat"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "node_chat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.11.1", features = [] }
tauri-plugin-notification = "2.3.1"

[profile.release]
strip = true
lto = false
codegen-units = 256
opt-level = 3
incremental = true
